# ate-api

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
ate_api/: __init__.py  auth.py  authorities.py  clock.py  database.py  example.py  main.py  repositories.py  settings.py  unit_of_work.py
ate_api/domain/: __init__.py  authorities.py  capital_scheme_authority_reviews.py  capital_scheme_financials.py  capital_scheme_milestones.py  capital_schemes.py  data_sources.py  dates.py  financial_types.py  funding_programmes.py  moneys.py
ate_api/domain/capital_schemes/: authority_reviews.py  bid_statuses.py  capital_scheme_repositories.py  capital_schemes.py  financials.py  milestones.py  outputs.py  overviews.py
ate_api/infrastructure/: clock.py
ate_api/infrastructure/database/: __init__.py  authorities.py  base.py  capital_scheme_authority_reviews.py  capital_scheme_financials.py  capital_scheme_milestones.py  capital_schemes.py  data_sources.py  dates.py  financial_types.py  funding_programmes.py  observation_types.py  unit_of_work.py
ate_api/infrastructure/memory/: __init__.py  authorities.py
ate_api/routes/: __init__.py  authorities.py  base.py  capital_schemes.py  collections.py  concurrency.py  data_sources.py  dates.py  docs.py  financial_types.py  funding_programmes.py  links.py  observation_types.py
ate_api/routes/authorities/: __init__.py  authorities.py  capital_schemes.py
ate_api/routes/capital_schemes/: __init__.py  authority_reviews.py  bid_statuses.py  capital_schemes.py  financials.py  milestones.py  outputs.py  overviews.py
cloud/: README.md
cloud/docker-repository/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
cloud/identity/: .terraform.lock.hcl  README.md  create-client.sh  delete-client.sh  get-vars.sh  main.tf  outputs.tf  request-access-token.sh  select-client.sh  set-secrets.sh  variables.tf  versions.tf
cloud/identity/client/: main.tf  outputs.tf  variables.tf
cloud/service/: README.md  main.tf  outputs.tf  set-secrets.sh  variables.tf
cloud/tf-backend/: .terraform.lock.hcl  README.md  main.tf
docs/: maintenance.md  releasing.md
docs/architecture/: README.md  adr-001-record-architecture-decisions.md  adr-002-use-fastapi.md  adr-003-use-auth0.md  adr-XXX-template.md
tests/: test_example.py  test_main.py
tests/e2e/: app_client.py  conftest.py  routes.py  server.py  test_authorities.py  test_capital_schemes.py  test_example.py  test_funding_programmes.py
tests/integration/: conftest.py  memory.py  oauth.py  test_auth.py  test_authorities.py  test_capital_schemes.py  test_compression.py  test_docs.py  test_example.py  test_funding_programmes.py  test_memory.py
tests/unit/: test_authorities.py  test_database.py
(+103 files in other folders)
