[project]
name = "ate-api"
version = "1.0.0"
description = "Operational data API for Active Travel England."
requires-python = ">=3.13"
dependencies = [
    "authlib~=1.5.0",
    "fastapi[standard]~=0.115.0",
    "pydantic-settings~=2.8.0"
]

[project.optional-dependencies]
dev = [
    "black~=25.1.0",
    "isort~=6.0.0",
    "mypy~=1.15.0",
    "pytest~=8.3.0",
    "respx~=0.22.0",
    "ruff~=0.9.0"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# black

[tool.black]
line-length = 120

# isort

[tool.isort]
profile = "black"

# mypy

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "authlib.*"
]
ignore_missing_imports = true

# ruff

[tool.ruff]
line-length = 120
